Small update to the Automake files: replaced a literal path in a bunch of file names with a variable.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1872 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,13 @@
 # This is the top Makefile.am for OmicABELnoMM. OmicABELnoMM uses a
 # non-recursive Makefile, so make sure that path names are included,
-# etc.
+# etc. Consequently, the order of the includes also matters w.r.t. the
+# definition of variables etc.
 # The includes below load the Automake files for the specific
 # subdirectories. Automake integrates them all in one large Makefile.
 
 CLEANFILES =
 
 include $(srcdir)/src/Makefile.am
-include $(srcdir)/tests/Makefile.am
 include $(srcdir)/examples/Makefile.am
+include $(srcdir)/tests/Makefile.am
 include $(srcdir)/doc/Makefile.am
