OmicABELnoMM: Changed CXXFLAGS variable to CPPFLAGS, -D compiler options are for the preprocessiong stage.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1873 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,7 @@ oanomm_cpp = src/AIOwrapper.cpp src/Algorithm.cpp src/Utility.cpp
 oanomm_headers = $(oanomm_cpp:.cpp=.h) src/Definitions.h
 
 omicabelnomm_SOURCES = $(oanomm_headers) $(oanomm_cpp) src/main.cpp
-omicabelnomm_CXXFLAGS = $(AM_CXXFLAGS)
+omicabelnomm_CPPFLAGS = $(AM_CPPFLAGS)
 if USE_MPI
-omicabelnomm_CXXFLAGS += -DUSE_MPI
+omicabelnomm_CPPFLAGS += -DUSE_MPI
 endif
