Fixed OmicABELnoMM's problems with running the tests in 'make distcheck'.
This change removes the (empty) examples/results directory. tests/Makefile.am creates tests/results now, just before running the checks.

In tests/test.cpp I've changed the hard coded output directory from 'examples/results' to 'tests/results'. For the input files I've prepended the DATADIR macro to the file paths, to be replaced/filled in by a -D DATADIR= preprocessing opton. If the -D DATADIR option is not specified test.cpp will look in the examples/ directory.

Note, a "pure" 'make distcheck' still doesn't work because of problems building the documentation. Run it like this for now:
DISTCHECK_CONFIGURE_FLAGS="--disable-latex-doc" make distcheck



git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1874 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,26 +3,32 @@
 
 
 
-## Stuff needed for the checks in the tests/ directory
+## Stuff needed for the checks in the tests/ directory. The DATADIR
+## variable is used to tell the test program where to find the source
+## files. In a VPATH build (e.g. when running 'make distcheck') the
+## $(srcdir) variable is set to the correct location.
 check_PROGRAMS = tests/test_omicabelnomm
+tests_test_omicabelnomm_CPPFLAGS = -DDATADIR=\"$(srcdir)/\" $(AM_CPPFLAGS)
 if USE_MPI
-tests_test_omicabelnomm_CXXFLAGS = -DUSE_MPI $(AM_CXXFLAGS)
+tests_test_omicabelnomm_CPPFLAGS += -DUSE_MPI
 endif
 
-# List the sources for the test binary. Also include the empty
-# directory for the results, so that it gets included in the tar-ball
-# when running 'make dist'. Otherwise running 'make check' fails if
-# run by the user (since the test program doesn't check for the
-# directory's existence).
-testresultsdir = $(exmpldir)/results
+# List the sources for the test binary.
 tests_test_omicabelnomm_SOURCES =		\
  $(oanomm_headers)				\
  $(oanomm_cpp)					\
- $(testresultsdir)				\
  tests/test.cpp
 
+# List of programs to run when running 'make check'
 TESTS = $(check_PROGRAMS)
 
+## Create the directory where the test results will be stored before
+## running the tests
+testresultsdir = tests/results
+AM_TESTS_ENVIRONMENT = \
+ $(MKDIR_P) $(testresultsdir);
+
+# Files created by the test programs need to be cleaned up.
 cleanfiles_tests = $(testresultsdir)/dosages__dis.txt	\
  $(testresultsdir)/dosages_add__dis.txt			\
  $(testresultsdir)/dosages_dom__dis.txt			\
