Fixed the problem of building OmicABELnoMM's documentation in a VPATH build. Now 'make distcheck' works as expected.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1875 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -9,7 +9,7 @@ dist_doc_DATA = doc/howtocompile.txt doc/UserGuide.tex	\
 ## enabled via ./configure.
 if BUILD_latexdoc
 if HAVE_PDFLATEX
-DOCDIR = doc/
+DOCDIR = doc
 MANNAME = $(DOCDIR)/UserGuide
 MANPDF = $(MANNAME).pdf
 MANTEXSRC = $(MANNAME).tex
@@ -22,10 +22,11 @@ CLEANFILES += $(MANPDF) $(MANNAME).log $(MANNAME).idx $(MANNAME).out \
 endif
 endif
 
-
+SUFFIXES = .aux .tex .pdf
 # Several make rules to generate the PDF from the LaTeX source
 .aux.pdf:
 	@echo === Making PDF: $@ from $^ ===
+	$(MKDIR_P) $(DOCDIR)
 	$(PDFLATEX) $(PDFLATEXOPTS) $(srcdir)/$(MANTEXSRC)
 	@while ( grep "Rerun to "			\
 		$(MANNAME).log  ); do			\
@@ -41,6 +42,7 @@ endif
 
 .tex.aux:
 	@echo === Making $@ file from $^ ===
+	$(MKDIR_P) $(DOCDIR)
 	$(PDFLATEX) $(PDFLATEXOPTS) $(srcdir)/$(MANTEXSRC)
 ## Look for citations. Make sure grep never returns an error code.
 	@grep "^\\\\citation" $(MANAUX) > .btmp.new || true
