--- a/configure.ac
+++ b/configure.ac
@@ -66,7 +66,7 @@ AC_OPENMP
 AC_SUBST(AM_CXXFLAGS, "$OPENMP_CFLAGS")
 
 #AM_CXXFLAGS="-static  -g -ggdb -I../libs/include -I./libs/include $AM_CXXFLAGS"
-AM_CXXFLAGS=" -std=c++11 -O3 -I../libs/include -I./libs/include $AM_CXXFLAGS"
+AM_CXXFLAGS=" -I../libs/include -I./libs/include $AM_CXXFLAGS"
 # Checks for libraries.
 # pthread library
 AC_SEARCH_LIBS([pthread_mutex_init], [pthread], [],
