In OmicABELnoMM's configure.ac: Removed the include paths for boost from CXXFLAGS. They only belong in CPPFLAGS.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1879 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/configure.ac
+++ b/configure.ac
@@ -126,10 +126,8 @@ AC_ARG_WITH([boost-include-path],
       [location of the Boost math headers, defaults to /usr/include/boost/]
       )
     ],
-   [CXXFLAGS+=" -I${withval}"
-    CPPFLAGS+=" -I${withval}"],
-   [CXXFLAGS+=' -I/usr/include/boost/'
-    CPPFLAGS+=' -I/usr/include/boost/']
+   [CPPFLAGS+=" -I${withval}"],
+   [CPPFLAGS+=' -I/usr/include/boost/']
 )
 
 # Check for the Boost Math header files; this uses a compile check, so
