Use the proper way to assign CPPFLAGS in configure.ac, see http://stackoverflow.com/questions/20230827/how-to-set-include-paths-with-autotools
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1880 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/configure.ac
+++ b/configure.ac
@@ -126,8 +126,8 @@ AC_ARG_WITH([boost-include-path],
       [location of the Boost math headers, defaults to /usr/include/boost/]
       )
     ],
-   [CPPFLAGS+=" -I${withval}"],
-   [CPPFLAGS+=' -I/usr/include/boost/']
+   [AC_SUBST(CPPFLAGS, "$CPPFLAGS -I${withval}")],
+   [AC_SUBST(CPPFLAGS, "$CPPFLAGS -I/usr/include/boost/")]
 )
 
 # Check for the Boost Math header files; this uses a compile check, so
