Add configure option to create the data files
With the move to GitHub, we had to remove the example data files because
they were over 100MB. As a result, the make step failed because there is
no Makefile entry that generates the data.

This adds a user configurable option (--enable-examples) to ./configure
that the user must explicitly mention when (s)he wants to build the
large example files (running the R script takes a while).

Note that the large example files will be removed when running 'make clean'.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,16 +2,19 @@
 # in the top Makefile.am
 
 exmpldir = examples
-examplefiles = $(exmpldir)/CreateData.R		\
- $(exmpldir)/XL.fvd				\
+
+examplescripts = CreateData.R
+
+examplefiles = $(exmpldir)/exclude_individuals.txt	\
+ $(exmpldir)/dosages_1.txt				\
+ $(exmpldir)/dosages_2.txt
+
+largeexamplefiles = $(exmpldir)/XL.fvd		\
  $(exmpldir)/XL.fvi				\
  $(exmpldir)/XR.fvd				\
  $(exmpldir)/XR.fvi				\
  $(exmpldir)/Y.fvd				\
- $(exmpldir)/Y.fvi				\
- $(exmpldir)/exclude_individuals.txt		\
- $(exmpldir)/dosages_1.txt			\
- $(exmpldir)/dosages_2.txt
+ $(exmpldir)/Y.fvi
 
 intexmpldir = examples/interactions
 intexamplefiles = $(intexmpldir)/INT011.fvd	\
@@ -46,10 +49,20 @@ intexamplefiles = $(intexmpldir)/INT011.fvd	\
  $(intexmpldir)/Y.fvi
 
 
-
 ## Specify where to store the example data
 exampledir = $(pkgdatadir)/examples
 dist_example_DATA = $(examplefiles)
 
+if BUILD_examples
+largeexamplefiles: $(exmpldir)/$(examplescripts) $(examplefiles)
+	cd $(exmpldir) && R --vanilla --no-save < $(examplescripts)
+
+dist_example_DATA += $(largeexamplefiles)
+endif
+
 intexampledir = $(pkgdatadir)/examples/interactions
 dist_intexample_DATA = $(intexamplefiles)
+
+cleanfiles_examples = $(largeexamplefiles)
+
+CLEANFILES += $(cleanfiles_examples)
