Ignore some files and dirs
(Most of which are cleaned by 'make disclean' anyway.)

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,12 @@
 /src/omicabelnomm-Utility.o
 /src/omicabelnomm-main.o
 /tests/.deps/tests_test_omicabelnomm-test.Po
+/doc/UserGuide.aux
+/examples/XL.fvd
+/examples/XL.fvi
+/examples/XR.fvd
+/examples/XR.fvi
+/examples/.Rhistory
+/doc/UserGuide.synctex.gz
+/doc/auto/UserGuide.el
+/lib/
