For compiling OmicOUT

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 # NOTE: This is not a recursive makefile. This file is to be included
 # in the top Makefile.am
 
-bin_PROGRAMS = omicabelnomm
+bin_PROGRAMS = omicabelnomm omicout
 
 oanomm_cpp = src/AIOwrapper.cpp src/Algorithm.cpp src/Utility.cpp
 oanomm_headers = $(oanomm_cpp:.cpp=.h) src/Definitions.h
@@ -11,3 +11,6 @@ omicabelnomm_CPPFLAGS = $(AM_CPPFLAGS)
 if USE_MPI
 omicabelnomm_CPPFLAGS += -DUSE_MPI
 endif
+
+omicout_SOURCES = OmicOUT/main.cpp
+omicout_CPPFLAGS = $(AM_CPPFLAGS)
